--- a/Modul_4/4.3-Indlæsning_af_data.md
+++ b/Modul_4/4.3-Indlæsning_af_data.md
@@ -1,1 +1,121 @@
+# 📂 **4.3 Indlæsning af Data i Pandas**  
 
+Pandas gør det nemt at **indlæse og arbejde med data** fra forskellige filformater såsom **CSV, Excel, JSON og SQL**.  
+
+> **Mål for dette modul:**  
+> ✅ Lære at indlæse data fra CSV, Excel og JSON  
+> ✅ Forstå hvordan man håndterer store datasæt  
+> ✅ Udforske nyttige parametre ved dataindlæsning  
+
+---
+
+## 📌 **1. Indlæsning af CSV-filer**  
+
+Den mest almindelige filtype til dataanalyse er **CSV (Comma-Separated Values)**.  
+
+```python
+import pandas as pd
+
+# Indlæs en CSV-fil
+df = pd.read_csv("data.csv")
+
+# Vis de første 5 rækker
+print(df.head())
+```
+
+> **📌 `head()`** viser de første rækker, så du ikke oversvømmer terminalen.
+
+### **1.1 Tilpasning af CSV-indlæsning**  
+
+```python
+df = pd.read_csv("data.csv", sep=";", encoding="utf-8", header=0)
+```
+
+| **Parameter** | **Beskrivelse** |
+|--------------|---------------|
+| `sep=";"` | Angiver separator (fx `,` eller `;`). |
+| `encoding="utf-8"` | Sikrer korrekt tekstformat. |
+| `header=0` | Angiver, at første linje er kolonnenavne. |
+
+---
+
+## 📊 **2. Indlæsning af Excel-filer**  
+
+Pandas understøtter **Excel-filer** med `read_excel()`, men kræver **openpyxl**:  
+
+```bash
+pip install openpyxl
+```
+
+```python
+df = pd.read_excel("data.xlsx", sheet_name="Sheet1")
+
+print(df.head())
+```
+
+> **📌 `sheet_name="Sheet1"`** specificerer et ark, hvis der er flere ark i filen.
+
+---
+
+## 🌐 **3. Indlæsning af JSON-filer**  
+
+JSON (`JavaScript Object Notation`) er et **struktureret dataformat**, ofte brugt i API’er.  
+
+```python
+df = pd.read_json("data.json")
+
+print(df.head())
+```
+
+> **📌 JSON er ofte brugt til webservices og API'er.**
+
+---
+
+## 🛢 **4. Indlæsning af data fra SQL-databaser**  
+
+Pandas kan trække data direkte fra **SQL-databaser** ved hjælp af `read_sql()`.  
+
+```python
+import sqlite3
+
+# Opret forbindelse til en database
+conn = sqlite3.connect("database.db")
+
+# Læs data fra en SQL-tabel
+df = pd.read_sql("SELECT * FROM kunder", conn)
+
+print(df.head())
+```
+
+> **📌 Brug af SQL-databaser gør det nemt at arbejde med store datasæt.**
+
+---
+
+## 🎯 **5. Øvelser**  
+
+### 1️⃣ **Indlæsning af CSV-filer**
+- Download eller opret en CSV-fil med data.  
+- Indlæs filen i Pandas og vis de første 5 rækker.  
+
+### 2️⃣ **Indlæsning af Excel-filer**
+- Lav et Excel-ark med mindst to kolonner.  
+- Indlæs filen i Pandas og udskriv et bestemt ark.  
+
+### 3️⃣ **Indlæsning af JSON-filer**
+- Lav en JSON-fil med flere nøgler og værdier.  
+- Indlæs JSON-filen i Pandas og vis dataen.  
+
+### 🔥 **Bonusudfordring**
+- Opret en simpel SQLite-database og læs data fra en tabel i Pandas.  
+
+---
+
+## 🚀 **6. Opsummering**  
+✔ **`read_csv()`** → Indlæsning af CSV-data.  
+✔ **`read_excel()`** → Indlæsning af Excel-ark.  
+✔ **`read_json()`** → Indlæsning af JSON-filer.  
+✔ **`read_sql()`** → Indlæsning af data fra databaser.  
+
+**📌 Videre til næste modul: [4.4 - Filtrering og Selektion](4.4-Filtrering_og_selektion.md)**  
+
+God fornøjelse med Pandas! 🐼🚀  
