--- a/Modul_4/4.4-Filtrering_og_selektion.md
+++ b/Modul_4/4.4-Filtrering_og_selektion.md
@@ -1,1 +1,153 @@
+# 🔍 **4.4 Filtrering og Selektion i Pandas**  
 
+Når vi har indlæst data i Pandas, er det vigtigt at kunne **filtrere og udvælge specifikke data**.  
+I dette modul lærer du, hvordan du **vælger kolonner, filtrerer rækker og arbejder med betingelser i Pandas**.  
+
+> **Mål for dette modul:**  
+> ✅ Forstå, hvordan man vælger bestemte kolonner og rækker  
+> ✅ Filtrere data baseret på betingelser  
+> ✅ Arbejde med `.loc[]` og `.iloc[]` til præcise udtræk  
+
+---
+
+## 📌 **1. Udvælge kolonner i en DataFrame**  
+
+Du kan vælge én eller flere kolonner ved at bruge `df["Kolonne"]` eller `df[["Kol1", "Kol2"]]`.  
+
+```python
+import pandas as pd
+
+df = pd.read_csv("data.csv")
+
+# Vælg én kolonne
+print(df["Navn"])
+
+# Vælg flere kolonner
+df_subset = df[["Navn", "Alder"]]
+print(df_subset.head())
+```
+
+> **📌 Hvis du vælger én kolonne, får du en `Series`. Vælger du flere, får du en `DataFrame`.**  
+
+---
+
+## 🔍 **2. Vælge rækker med `.loc[]` og `.iloc[]`**  
+
+### **2.1 Vælge rækker baseret på indeks**  
+
+```python
+# Vælg en bestemt række med .loc[] (baseret på række-labels)
+print(df.loc[2])
+
+# Vælg en bestemt række med .iloc[] (baseret på numerisk indeks)
+print(df.iloc[0])  # Første række
+```
+
+### **2.2 Vælge specifikke rækker og kolonner**  
+
+```python
+# Vælg række 2 og kun kolonnen "Navn"
+print(df.loc[2, "Navn"])
+
+# Vælg række 0-2 og kun "Navn" og "Alder"
+print(df.loc[0:2, ["Navn", "Alder"]])
+```
+
+> **📌 `.loc[]` bruger rækker baseret på deres navne, mens `.iloc[]` bruger numeriske indeks.**  
+
+---
+
+## 🔄 **3. Filtrering af data baseret på betingelser**  
+
+### **3.1 Vælg rækker med en betingelse**  
+
+```python
+# Vælg personer over 25 år
+df_over_25 = df[df["Alder"] > 25]
+print(df_over_25)
+```
+
+### **3.2 Kombinere flere betingelser**  
+
+```python
+# Vælg personer over 25 år OG fra Aarhus
+df_aarhus_25 = df[(df["Alder"] > 25) & (df["By"] == "Aarhus")]
+print(df_aarhus_25)
+
+# Vælg personer over 25 år ELLER fra Aarhus
+df_aarhus_eller_25 = df[(df["Alder"] > 25) | (df["By"] == "Aarhus")]
+print(df_aarhus_eller_25)
+```
+
+> **📌 Brug `&` (og) og `|` (eller) til at kombinere betingelser.**  
+
+### **3.3 Filtrere baseret på liste af værdier**  
+
+```python
+# Vælg personer, der bor i enten Aarhus eller Odense
+df_byer = df[df["By"].isin(["Aarhus", "Odense"])]
+print(df_byer)
+```
+
+> **📌 `.isin()` bruges til at vælge rækker, der matcher en liste af værdier.**  
+
+---
+
+## ⚠ **4. Håndtering af manglende værdier**  
+
+I virkelige datasæt er der ofte **manglende værdier** (`NaN`).  
+
+### **4.1 Find manglende værdier**  
+
+```python
+print(df.isnull().sum())  # Tæller manglende værdier pr. kolonne
+```
+
+### **4.2 Fjerne rækker med manglende værdier**  
+
+```python
+df_renset = df.dropna()
+print(df_renset)
+```
+
+### **4.3 Erstatte manglende værdier**  
+
+```python
+df["Alder"].fillna(df["Alder"].mean(), inplace=True)  # Erstat med gennemsnittet
+```
+
+> **📌 `fillna()` kan bruges til at erstatte `NaN` med en standardværdi.**  
+
+---
+
+## 🎯 **5. Øvelser**  
+
+### 1️⃣ **Få overblik over et datasæt**
+- Indlæs en CSV-fil og print:
+  - Kolonnenavne (`.columns`)
+  - Antal rækker og kolonner (`.shape`)
+  - Statistik (`.describe()`)
+
+### 2️⃣ **Filtrering af data**
+- Vælg kun bestemte kolonner (`Navn` og `Alder`).
+- Filtrer personer over 30 år.
+
+### 3️⃣ **Håndtering af manglende værdier**
+- Find manglende værdier med `.isnull().sum()`.
+- Erstat dem med en passende værdi.
+
+### 🔥 **Bonusudfordring**
+- Find de 5 ældste personer i dit datasæt.
+- Find hvor mange personer, der bor i København.
+
+---
+
+## 🚀 **6. Opsummering**  
+✔ **Brug `.loc[]` og `.iloc[]` til at vælge rækker og kolonner**  
+✔ **Filtrer data med betingelser som `df[df["Alder"] > 30]`**  
+✔ **Brug `.isin()` til at filtrere baseret på en liste af værdier**  
+✔ **Håndter manglende værdier med `.dropna()` og `.fillna()`**  
+
+**📌 Videre til næste modul: [4.5 - Datamanipulation](4.5-Datamanipulation.md)**  
+
+God fornøjelse med datafiltrering i Pandas! 🐼🚀  
