--- a/Modul_4/4.5-Datamanipulation.md
+++ b/Modul_4/4.5-Datamanipulation.md
@@ -1,1 +1,143 @@
+# 🔧 **4.5 Datamanipulation i Pandas**  
 
+Når vi har indlæst og filtreret vores data, vil vi ofte **ændre, transformere og manipulere det** for at gøre det klar til analyse.  
+I dette modul lærer du at **tilføje og fjerne kolonner**, **ændre værdier**, **håndtere manglende data** og **transformere data**.  
+
+> **Mål for dette modul:**  
+> ✅ Tilføje, ændre og slette kolonner  
+> ✅ Erstatte og ændre værdier i et datasæt  
+> ✅ Håndtere manglende data korrekt  
+> ✅ Sortere og transformere data effektivt  
+
+---
+
+## 📌 **1. Tilføje og fjerne kolonner**  
+
+### **1.1 Tilføje en ny kolonne**  
+
+```python
+import pandas as pd
+
+df = pd.read_csv("data.csv")
+
+# Tilføj en ny kolonne baseret på eksisterende data
+df["Alder om 5 år"] = df["Alder"] + 5
+
+print(df.head())
+```
+
+### **1.2 Slette en kolonne**  
+
+```python
+df.drop(columns=["Alder om 5 år"], inplace=True)
+```
+
+> **📌 Brug `inplace=True` for at ændre DataFrame direkte.**  
+
+---
+
+## 🔄 **2. Ændre værdier i en kolonne**  
+
+```python
+# Erstat en specifik værdi
+df["By"] = df["By"].replace("København", "CPH")
+
+# Erstat flere værdier på én gang
+df["Status"] = df["Status"].replace({"Aktiv": "A", "Inaktiv": "I"})
+```
+
+> **📌 Brug `.replace()` til at erstatte værdier i en kolonne.**  
+
+---
+
+## ⚠ **3. Håndtering af manglende værdier (`NaN`)**  
+
+### **3.1 Tjek for manglende værdier**  
+
+```python
+print(df.isnull().sum())  # Tæl manglende værdier per kolonne
+```
+
+### **3.2 Fjerne rækker med manglende værdier**  
+
+```python
+df_cleaned = df.dropna()
+```
+
+### **3.3 Erstatte manglende værdier**  
+
+```python
+df["Alder"].fillna(df["Alder"].mean(), inplace=True)  # Erstat med gennemsnit
+```
+
+> **📌 `fillna()` bruges til at erstatte `NaN`-værdier med en standardværdi.**  
+
+---
+
+## 🔍 **4. Sortering og omarrangering af data**  
+
+### **4.1 Sortere efter en kolonne**  
+
+```python
+df = df.sort_values("Alder", ascending=False)  # Sortér efter alder, faldende
+```
+
+### **4.2 Omarrangere kolonner**  
+
+```python
+df = df[["Navn", "By", "Alder"]]  # Ændrer rækkefølgen af kolonner
+```
+
+> **📌 Brug `sort_values()` til at sortere, og omarranger kolonner med `df[["kol1", "kol2"]]`.**  
+
+---
+
+## 🛠 **5. Anvende funktioner på kolonner (`apply()`)**  
+
+`apply()` giver mulighed for **at udføre transformationer på kolonner**.  
+
+```python
+# Konverter tekst til store bogstaver
+df["Navn"] = df["Navn"].apply(lambda x: x.upper())
+
+# Opret en ny kolonne med tilpassede værdier
+df["Kategori"] = df["Alder"].apply(lambda x: "Voksen" if x >= 18 else "Barn")
+```
+
+> **📌 `apply()` gør det nemt at transformere data baseret på regler.**  
+
+---
+
+## 🎯 **6. Øvelser**  
+
+### 1️⃣ **Tilføje og fjerne kolonner**
+- Tilføj en ny kolonne `"Alder om 10 år"` baseret på `"Alder"`.
+- Slet kolonnen igen.
+
+### 2️⃣ **Ændre værdier**
+- Erstat `"København"` med `"CPH"` i `"By"`-kolonnen.
+- Konverter alle navne i `"Navn"`-kolonnen til store bogstaver.
+
+### 3️⃣ **Håndtering af manglende værdier**
+- Find alle `NaN`-værdier i dit datasæt.
+- Erstat manglende alder med gennemsnittet.
+
+### 4️⃣ **Sortering og omarrangering**
+- Sortér datasættet efter `"Alder"`, stigende.
+- Omarranger kolonnerne til `["Navn", "Alder", "By"]`.
+
+### 🔥 **Bonusudfordring**
+- Brug `.apply()` til at lave en `"Kategori"`-kolonne, hvor personer **under 18** får `"Barn"` og **over 18** får `"Voksen"`.
+
+---
+
+## 🚀 **7. Opsummering**  
+✔ **Tilføj og slet kolonner med `df["ny_kol"]` og `drop()`**  
+✔ **Ændr værdier med `.replace()`**  
+✔ **Håndter manglende værdier med `.dropna()` og `.fillna()`**  
+✔ **Sortér med `.sort_values()`**  
+✔ **Anvend `apply()` for transformationer**  
+
+**📌 Videre til næste modul: [4.6 - Gruppering og Aggregering](4.6-Gruppering_og_aggregering.md)**  
+
+God fornøjelse med Pandas! 🐼🚀  
