--- a/Modul_4/4.6-Gruppering_og_aggregering.md
+++ b/Modul_4/4.6-Gruppering_og_aggregering.md
@@ -1,1 +1,132 @@
+# 🔄 **4.6 Gruppering og Aggregering i Pandas**  
 
+Når vi arbejder med store datasæt, er det ofte nødvendigt at **gruppere og aggregere** data for at få indsigt.  
+I dette modul lærer du at bruge **`groupby()`**, **`agg()`**, **`pivot tables`** og andre metoder til at **analysere og opsummere data effektivt**.  
+
+> **Mål for dette modul:**  
+> ✅ Forstå hvordan `groupby()` bruges til at gruppere data  
+> ✅ Aggregere data med `sum()`, `mean()`, `count()` osv.  
+> ✅ Oprette pivot-tabeller til bedre dataanalyse  
+> ✅ Sammenflette og transformere grupperede data  
+
+---
+
+## 📌 **1. Gruppering af data med `groupby()`**  
+
+`groupby()` bruges til at **gruppere rækker** baseret på én eller flere kolonner.  
+
+```python
+import pandas as pd
+
+df = pd.read_csv("data.csv")
+
+# Gruppér data efter "By" og beregn gennemsnitsalder
+df_grupperet = df.groupby("By")["Alder"].mean()
+
+print(df_grupperet)
+```
+
+📌 **Output:**  
+```
+By
+Aarhus       28.4
+København    32.1
+Odense       27.3
+Name: Alder, dtype: float64
+```
+
+> **📌 `groupby()` samler data baseret på en kategori og udfører en beregning.**  
+
+### **1.1 Gruppér flere kolonner**  
+
+```python
+df_grupperet = df.groupby(["By", "Job"])["Alder"].mean()
+print(df_grupperet)
+```
+
+> **📌 Du kan gruppere efter flere kolonner for at få mere detaljeret indsigt.**  
+
+---
+
+## 📊 **2. Aggregere data med `agg()`**  
+
+`agg()` bruges til at **udføre flere beregninger på samme tid**.  
+
+```python
+df_agg = df.groupby("By").agg({
+    "Alder": ["mean", "min", "max"],
+    "Indkomst": ["sum"]
+})
+
+print(df_agg)
+```
+
+📌 **Output:**  
+```
+             Alder                 Indkomst
+              mean min max      sum
+By                                     
+Aarhus      28.4  22  35    150000
+København   32.1  25  40    180000
+Odense      27.3  21  32    120000
+```
+
+> **📌 `agg()` gør det muligt at kombinere flere beregninger i én kommando.**  
+
+---
+
+## 🔄 **3. Pivot-tabeller i Pandas**  
+
+Pandas **pivot-tabeller** minder om dem i Excel og giver en **fleksibel måde at opsummere data på**.  
+
+```python
+df_pivot = df.pivot_table(values="Indkomst", index="By", columns="Job", aggfunc="mean")
+print(df_pivot)
+```
+
+> **📌 `pivot_table()` er en kraftfuld metode til at analysere data i flere dimensioner.**  
+
+---
+
+## 🔍 **4. Sammenfletning af grupperede data**  
+
+Du kan **sammenflette grupperede data** med resten af datasættet.  
+
+```python
+df_gruppe = df.groupby("By")["Indkomst"].mean().reset_index()
+
+# Sammenflet med det originale datasæt
+df = df.merge(df_gruppe, on="By", suffixes=("", "_Gennemsnit"))
+print(df.head())
+```
+
+> **📌 `.reset_index()` konverterer en grupperet tabel tilbage til en DataFrame.**  
+
+---
+
+## 🎯 **5. Øvelser**  
+
+### 1️⃣ **Gruppering af data**
+- Gruppér dit datasæt efter `"By"` og beregn gennemsnittet af `"Alder"`.  
+- Gruppér efter `"Job"` og tælle antallet af personer i hver kategori.  
+
+### 2️⃣ **Brug af `agg()`**
+- Find min-, max- og gennemsnitsværdier for `"Indkomst"`, grupperet efter `"By"`.  
+
+### 3️⃣ **Pivot-tabeller**
+- Opret en pivot-tabel, hvor `"Job"` er kolonner, `"By"` er rækker, og `"Indkomst"` er værdierne.  
+
+### 🔥 **Bonusudfordring**
+- Lav en pivot-tabel, der viser gennemsnitsalderen for hver `"Job"`-kategori i hver `"By"`.  
+
+---
+
+## 🚀 **6. Opsummering**  
+✔ **`groupby()` grupperer data efter en eller flere kolonner**  
+✔ **`agg()` udfører flere beregninger på én gang**  
+✔ **Pivot-tabeller opsummerer komplekse datasæt**  
+✔ **Sammenfletning af grupperede data gør det lettere at analysere**  
+
+**📌 Videre til næste modul: [4.8-Lagring af data](4.8-Lagring_af_data.md)**  
+
+God fornøjelse med Pandas! 🐼🚀  
