--- a/Modul_4/4.8-Lagring_af_data.md
+++ b/Modul_4/4.8-Lagring_af_data.md
@@ -1,1 +1,119 @@
+# 💾 **4.8 Lagring af Data i Pandas**  
 
+Når vi har behandlet vores data, er det vigtigt at kunne **gemme det i forskellige formater**.  
+I dette modul lærer du at gemme data i **CSV, Excel, JSON og SQL**.  
+
+> **Mål for dette modul:**  
+> ✅ Gemme data i CSV, Excel og JSON  
+> ✅ Forstå forskellen mellem de forskellige filformater  
+> ✅ Lagring i databaser med SQL  
+
+---
+
+## 📌 **1. Gemme DataFrame som CSV-fil**  
+
+CSV-filer (`Comma-Separated Values`) er det mest anvendte format til dataudveksling.  
+
+```python
+import pandas as pd
+
+df = pd.DataFrame({
+    "Navn": ["Lise", "Anders", "Mia"],
+    "Alder": [25, 30, 28],
+    "By": ["Aarhus", "København", "Odense"]
+})
+
+# Gem DataFrame som CSV-fil
+df.to_csv("data.csv", index=False)
+```
+
+> **📌 `index=False` sikrer, at Pandas ikke gemmer den interne indekskolonne.**  
+
+---
+
+## 📊 **2. Gemme DataFrame som Excel-fil**  
+
+Excel-filer er populære i virksomheder og forskning. Pandas kræver `openpyxl` for at arbejde med Excel.  
+
+```bash
+pip install openpyxl
+```
+
+```python
+df.to_excel("data.xlsx", index=False, sheet_name="Ark1")
+```
+
+> **📌 `sheet_name="Ark1"` specificerer hvilket ark, data skal gemmes i.**  
+
+---
+
+## 🌐 **3. Gemme DataFrame som JSON-fil**  
+
+JSON (`JavaScript Object Notation`) bruges ofte i **webservices og API'er**.  
+
+```python
+df.to_json("data.json", orient="records", indent=4)
+```
+
+| **Parameter** | **Beskrivelse** |
+|--------------|----------------|
+| `orient="records"` | Gemmer data som en liste af dictionaries |
+| `indent=4` | Formaterer JSON-data for bedre læsbarhed |
+
+> **📌 JSON er let at læse og bruges bredt i datadeling.**  
+
+---
+
+## 🛢 **4. Gemme data i en SQL-database**  
+
+Pandas kan også gemme data direkte i en database.  
+
+```bash
+pip install sqlalchemy sqlite3
+```
+
+```python
+from sqlalchemy import create_engine
+
+# Opret en SQLite database
+engine = create_engine("sqlite:///data.db")
+
+# Gem DataFrame i databasen
+df.to_sql("personer", engine, if_exists="replace", index=False)
+```
+
+| **Parameter** | **Beskrivelse** |
+|--------------|----------------|
+| `"sqlite:///data.db"` | Opretter en SQLite-database |
+| `"personer"` | Navnet på databasen |
+| `if_exists="replace"` | Overskriver eksisterende tabel |
+
+> **📌 SQL er ideelt til håndtering af store datasæt og forespørgsler.**  
+
+---
+
+## 🎯 **5. Øvelser**  
+
+### 1️⃣ **Gem som CSV**  
+- Opret en DataFrame og gem den som `"test.csv"`.  
+- Åbn filen manuelt for at se formatet.  
+
+### 2️⃣ **Gem som Excel**  
+- Konverter `"test.csv"` til `"test.xlsx"`.  
+
+### 3️⃣ **Gem som JSON**  
+- Konverter `"test.xlsx"` til `"test.json"`.  
+
+### 🔥 **Bonusudfordring**  
+- Opret en SQLite-database og gem dine data der.  
+
+---
+
+## 🚀 **6. Opsummering**  
+✔ **Gem data med `.to_csv()`, `.to_excel()`, `.to_json()`, `.to_sql()`**  
+✔ **Brug `index=False` for at undgå unødvendige indeks**  
+✔ **SQL er velegnet til store datamængder**  
+
+**📌 Videre til næste modul: [5.0 - Datavisualisering](/Modul_5)**  
+
+God fornøjelse med data-lagring i Pandas! 💾🐼🚀  
