--- a/Modul_4/4.7-Sammenfletning_af_data.md
+++ b/Modul_4/4.7-Sammenfletning_af_data.md
@@ -1,1 +1,165 @@
+# 🔗 **4.7 Sammenfletning af Data i Pandas**  
 
+Ofte har vi data i flere forskellige datasæt, som vi ønsker at **kombinere**.  
+I dette modul lærer du at bruge **`merge()`**, **`concat()`**, og **`join()`** til at sammenflette data i Pandas.  
+
+> **Mål for dette modul:**  
+> ✅ Forstå forskellen mellem `merge()`, `concat()` og `join()`  
+> ✅ Sammenflette data baseret på fælles kolonner  
+> ✅ Håndtere forskellige typer af sammenfletninger (inner, outer, left, right)  
+
+---
+
+## 📌 **1. Sammenfletning med `merge()`**  
+
+`merge()` minder om SQL `JOIN` og bruges til at **sammenflette to DataFrames baseret på en fælles kolonne**.  
+
+```python
+import pandas as pd
+
+# Første DataFrame
+df1 = pd.DataFrame({
+    "ID": [1, 2, 3],
+    "Navn": ["Lise", "Anders", "Mia"]
+})
+
+# Andet DataFrame
+df2 = pd.DataFrame({
+    "ID": [1, 2, 4],
+    "Alder": [25, 30, 28]
+})
+
+# Merge på "ID"-kolonnen
+df_merged = pd.merge(df1, df2, on="ID")
+print(df_merged)
+```
+
+📌 **Output:**  
+```
+   ID   Navn  Alder
+0   1  Lise     25
+1   2  Anders   30
+```
+
+> **📌 `merge()` udfører som standard en "inner join", hvilket betyder, at kun rækker med matchende `ID` beholdes.**  
+
+### **1.1 Typer af sammenfletning i `merge()`**  
+
+| **Type** | **Beskrivelse** |
+|----------|---------------|
+| `inner` | Beholder kun fælles rækker |
+| `left` | Beholder alle rækker fra venstre DataFrame |
+| `right` | Beholder alle rækker fra højre DataFrame |
+| `outer` | Beholder alle rækker fra begge DataFrames |
+
+```python
+# Venstre join (alle rækker fra df1)
+df_left = pd.merge(df1, df2, on="ID", how="left")
+
+# Højre join (alle rækker fra df2)
+df_right = pd.merge(df1, df2, on="ID", how="right")
+
+# Fuld join (alle rækker fra begge DataFrames)
+df_outer = pd.merge(df1, df2, on="ID", how="outer")
+```
+
+> **📌 Brug `how="left"`, `how="right"`, eller `how="outer"` afhængigt af, hvilke data du vil bevare.**  
+
+---
+
+## 🔗 **2. Sammenfletning med `concat()`**  
+
+Hvis vi vil **kombinere rækker fra flere DataFrames**, kan vi bruge `concat()`.  
+
+```python
+df1 = pd.DataFrame({"Navn": ["Lise", "Anders"], "Alder": [25, 30]})
+df2 = pd.DataFrame({"Navn": ["Mia", "Søren"], "Alder": [28, 35]})
+
+df_kombineret = pd.concat([df1, df2], ignore_index=True)
+print(df_kombineret)
+```
+
+📌 **Output:**  
+```
+    Navn  Alder
+0  Lise     25
+1  Anders   30
+2    Mia     28
+3  Søren     35
+```
+
+> **📌 `concat()` bruges, når vi vil **tilføje rækker** til et eksisterende DataFrame.**  
+
+### **2.1 Sammenfletning af kolonner med `concat(axis=1)`**  
+
+```python
+df3 = pd.DataFrame({"Job": ["Ingeniør", "Lærer", "Læge", "Advokat"]})
+
+df_sammen = pd.concat([df_kombineret, df3], axis=1)
+print(df_sammen)
+```
+
+📌 **Output:**  
+```
+    Navn  Alder        Job
+0  Lise     25  Ingeniør
+1  Anders   30    Lærer
+2    Mia     28     Læge
+3  Søren     35  Advokat
+```
+
+> **📌 Brug `axis=1` for at **tilføje kolonner** i stedet for rækker.**  
+
+---
+
+## 🔄 **3. Sammenfletning med `join()`**  
+
+`join()` bruges, når vi vil **sammenflette DataFrames baseret på indeks i stedet for kolonner**.  
+
+```python
+df1 = pd.DataFrame({"Alder": [25, 30, 28]}, index=["Lise", "Anders", "Mia"])
+df2 = pd.DataFrame({"Job": ["Ingeniør", "Lærer", "Læge"]}, index=["Lise", "Anders", "Mia"])
+
+df_joined = df1.join(df2)
+print(df_joined)
+```
+
+📌 **Output:**  
+```
+        Alder        Job
+Lise      25  Ingeniør
+Anders    30    Lærer
+Mia       28     Læge
+```
+
+> **📌 `join()` fungerer bedst, når begge DataFrames har samme indeks.**  
+
+---
+
+## 🎯 **4. Øvelser**  
+
+### 1️⃣ **Sammenfletning med `merge()`**
+- Opret to DataFrames med fælles kolonnen `"ID"`.
+- Sammenflet dem med en `"left join"`.
+
+### 2️⃣ **Brug af `concat()`**
+- Lav to DataFrames med navne og aldre.
+- Kombiner dem til ét stort DataFrame.
+
+### 3️⃣ **Brug af `join()`**
+- Lav to DataFrames med samme indeks.
+- Brug `.join()` til at kombinere dem.
+
+### 🔥 **Bonusudfordring**
+- Brug `merge()` til at sammenflette tre DataFrames baseret på en fælles nøgle.
+
+---
+
+## 🚀 **5. Opsummering**  
+✔ **Brug `merge()` til at sammenflette data baseret på en fælles kolonne**  
+✔ **Brug `concat()` til at kombinere rækker eller kolonner**  
+✔ **Brug `join()` når du vil kombinere data baseret på indeks**  
+
+**📌 Videre til næste modul: [4.8 - Lagring af Data](4.8-Lagring-af-Data.md)**  
+
+God fornøjelse med sammenfletning af data! 🔗🐼🚀  
