--- a/Modul_5/5.1-Introduktion.md
+++ b/Modul_5/5.1-Introduktion.md
@@ -58,6 +58,8 @@ plt.show()
 
 📌 **Output:** En simpel linjegraf, der viser sammenhængen mellem `x` og `y`.
 
+![billede](https://github.com/user-attachments/assets/5090184f-a76b-4522-940d-d6ca1184a785)
+
 ---
 
 ## 📂 **4. De vigtigste diagramtyper i Matplotlib**  
