--- a/Workshops/Workshop 1/Modul 5/test.qmd
+++ b/Workshops/Workshop 1/Modul 5/test.qmd
@@ -1,3 +1,14 @@
-# this is a test
-```python
-print("Hello, Python kursister!")```
+---
+title: "Python Undervisning"
+author: "Dit Navn"
+format: html
+---
+
+# Velkommen til Python-kurset!
+
+Dette er et Quarto-dokument, hvor vi kan **køre Python-kode**:
+
+```{python}
+x = 10
+y = 20
+print(f"Summen af x og y er: {x + y}")
